// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates correct metadata for: dynamic route 1`] = `
{
  "description": "View transaction 0x12345 on Gemefi (Gemefi) Explorer",
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Gemefi transaction 0x12345 | Gemefi",
  },
  "title": "Gemefi transaction 0x12345 | Gemefi",
}
`;

exports[`generates correct metadata for: dynamic route with API data 1`] = `
{
  "description": "0x12345, balances and analytics on the Gemefi (Gemefi) Explorer",
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Gemefi USDT token details | Gemefi",
  },
  "title": "Gemefi USDT token details | Gemefi",
}
`;

exports[`generates correct metadata for: static route 1`] = `
{
  "description": "Gemefi is the #1 open-source blockchain explorer available today. 100+ chains and counting rely on Gemefi data availability, APIs, and ecosystem tools to support their networks.",
  "opengraph": {
    "description": "",
    "imageUrl": "http://localhost:3000/static/og_placeholder.png",
    "title": "Gemefi blocks | Gemefi",
  },
  "title": "Gemefi blocks | Gemefi",
}
`;
